# sv2-tp

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml
.clusterfuzzlite/: .dockerignore  Dockerfile  build.sh  llvm-symbolizer-wrapper.c  project.yaml  symbolizer-wrapper.sh  symbolizer.sh
.github/workflows/: ci.yml  clusterfuzzlite-batch.yml  clusterfuzzlite-build.yml  clusterfuzzlite-cron.yml  clusterfuzzlite-pr.yml  clusterfuzzlite-shared.yml  sri-integration-test-daily.yml  sri-integration-test.yml
ci/test/: 00_setup_env_native_asan.sh  00_setup_env_native_tidy.sh  00_setup_env_win64.sh  01_base_install.sh  04_run_stratum_v2_scenario.sh  build-instrumented-llvm.sh  cfl-common.sh  run-cfl-helper.sh  stratum_v2_bitcoin.conf  stratum_v2_pool-regtest.toml.in  stratum_v2_sv2-tp.conf
cmake/: bitcoin-build-config.h.in
cmake/module/: Maintenance.cmake
contrib/devtools/: check-deps.sh  plot_memory_load.py
depends/: Makefile  README.md  gen_id  toolchain.cmake.in
doc/: build-unix.md  dependencies.md  developer-notes.md  release-process.md  stratum-v2.md  versions.md
doc/design/: libraries.md
doc/man/: sv2-tp.1
example/: printer.cpp
include/mp/: proxy-io.h  proxy.h
share/examples/: sv2-tp.conf
src/: CMakeLists.txt  blockencodings.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  init.h  key.cpp  key_io.cpp  logging.cpp  logging.h  message_start_chars.h  net.h  netaddress.h  netbase.cpp  netbase.h  pubkey.cpp  sv2-tp.cpp  txdb.h  txmempool.h  validation.cpp  validation.h  validation_stubs.cpp  validationinterface.h
src/common/: args.cpp  args.h  config.cpp  settings.cpp  settings.h
src/crypto/: CMakeLists.txt
src/init/: basic.cpp  common.cpp
src/interfaces/: chain.h  echo.cpp  echo.h  init.h  mining.h
src/ipc/: CMakeLists.txt  interfaces.cpp  process.cpp  process.h  protocol.h  util.h
src/ipc/capnp/: common-types.h  echo-types.h  echo.capnp  init.capnp  mining-types.h  mining.capnp  protocol.cpp
src/ipc/libmultiprocess/: CMakeLists.txt
src/ipc/libmultiprocess/cmake/: compat_config.cmake
src/ipc/libmultiprocess/example/: example.cpp
src/ipc/libmultiprocess/include/mp/: proxy-io.h  type-context.h  type-interface.h  type-threadmap.h
src/ipc/libmultiprocess/src/mp/: gen.cpp  util.cpp
src/kernel/: CMakeLists.txt  coinstats.cpp
src/mp/: gen.cpp  proxy.cpp
src/node/: chainstate.h  chainstatemanager_args.h
src/sv2/: block_options.h  coinbase_template.h  connman.cpp  connman.h  messages.cpp  messages.h  noise.cpp  template_provider.cpp  template_provider.h  transport.h
src/test/: CMakeLists.txt  main.cpp  sv2_connman_tester.h  sv2_connman_tests.cpp  sv2_messages_tests.cpp  sv2_mock_mining.cpp  sv2_mock_mining.h  sv2_noise_tests.cpp  sv2_template_provider_tests.cpp  sv2_test_setup.cpp  sv2_tester.cpp  sv2_tester_lifecycle_tests.cpp  sv2_tp_tester.cpp  sv2_tp_tester.h  sv2_transport_tests.cpp
src/test/fuzz/: check_globals.h  fuzz.cpp  sv2_messages.cpp  sv2_noise.cpp  util.cpp  util.h
src/test/util/: CMakeLists.txt  clusterfuzzlite.cpp  clusterfuzzlite.h  net.cpp  net.h  random.cpp  setup_common.h
src/util/: CMakeLists.txt  exec.cpp  sanitizer.h
src/validation/: chain.h  cs_main.h
test/: CMakeLists.txt  config.ini.in
test/lint/: check-doc.py  lint-circular-dependencies.py  lint-includes.py  lint-locale-dependence.py
test/sanitizer_suppressions/: tsan  ubsan
